--- a/desktop/messenger.ui
+++ b/desktop/messenger.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>849</width>
-    <height>655</height>
+    <width>450</width>
+    <height>555</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,21 +20,21 @@
    <widget class="QTextBrowser" name="textBrowser">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>50</y>
+      <x>10</x>
+      <y>60</y>
       <width>431</width>
-      <height>461</height>
+      <height>351</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">background-color: rgb(255, 255, 255);</string>
     </property>
    </widget>
-   <widget class="QTextEdit" name="textEdit">
+   <widget class="QTextEdit" name="textMessage">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>520</y>
+      <x>10</x>
+      <y>420</y>
       <width>431</width>
       <height>70</height>
      </rect>
@@ -46,8 +46,8 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>600</y>
+      <x>10</x>
+      <y>500</y>
       <width>89</width>
       <height>25</height>
      </rect>
@@ -59,13 +59,13 @@
      <string>Send</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit">
+   <widget class="QLineEdit" name="lineUserName">
     <property name="geometry">
      <rect>
-      <x>80</x>
-      <y>50</y>
+      <x>90</x>
+      <y>20</y>
       <width>111</width>
-      <height>25</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -75,8 +75,8 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>50</y>
+      <x>10</x>
+      <y>20</y>
       <width>81</width>
       <height>17</height>
      </rect>
@@ -91,8 +91,8 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>80</y>
+      <x>220</x>
+      <y>20</y>
       <width>71</width>
       <height>17</height>
      </rect>
@@ -104,13 +104,13 @@
      <string>Password</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit_2">
+   <widget class="QLineEdit" name="linePassword">
     <property name="geometry">
      <rect>
-      <x>80</x>
-      <y>80</y>
+      <x>300</x>
+      <y>20</y>
       <width>111</width>
-      <height>25</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="styleSheet">
