Добавил методы /getMe для обработки telegram API

--- a/desktop/messenger.ui
+++ b/desktop/messenger.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>450</width>
-    <height>555</height>
+    <height>552</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -115,6 +115,22 @@
     </property>
     <property name="styleSheet">
      <string notr="true">background-color: rgb(255, 255, 255);</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="TelegramStatus">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>500</y>
+      <width>121</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(255, 255, 255);</string>
+    </property>
+    <property name="text">
+     <string>Telegram status</string>
     </property>
    </widget>
   </widget>
